<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Background_GrayScale_100">

        <Button
            android:id="@+id/btn_next"
            android:layout_width="@dimen/dp_311"
            android:layout_height="@dimen/dp_56"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/standard_button_gray"
            android:enabled="false"
            android:text="@string/login_id_4"
            android:textColor="@color/Button_GrayScale_100"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_register_student_code" />

        <EditText
            android:id="@+id/et_register_student_code"
            android:layout_width="@dimen/dp_311"
            android:layout_height="@dimen/dp_56"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/dp_41"
            android:background="@drawable/lr_et_corner"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/login_id_2"
            android:importantForAutofill="no"
            android:inputType="none"
            android:maxLength="10"
            android:textColorHint="@color/GrayScale_50"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_register_title" />

        <LinearLayout
            android:id="@+id/ll_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9305">

            <TextView
                android:id="@+id/tv_register_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_id_9"
                android:textAppearance="@style/HustHoleTypography.Body3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7" />

            <TextView
                android:id="@+id/tv_register_user_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_id_10"
                android:textColor="@color/HH_Reminder_Link"
                android:textAppearance="@style/HustHoleTypography.Body3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_register_text1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.9305" />

            <TextView
                android:id="@+id/tv_register_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_id_11"
                android:textAppearance="@style/HustHoleTypography.Body3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_register_user_protocol"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.9305" />

            <TextView
                android:id="@+id/tv_register_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_id_12"
                android:textColor="@color/HH_Reminder_Link"
                android:textAppearance="@style/HustHoleTypography.Body3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/tv_register_text2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.9305" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_register_suffix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_20"
            android:text="@string/login_id_3"
            android:textColor="@color/Title_GrayScale_20"
            android:textAppearance="@style/HustHoleTypography.Body2"
            app:layout_constraintBottom_toBottomOf="@+id/et_register_student_code"
            app:layout_constraintEnd_toEndOf="@+id/et_register_student_code"
            app:layout_constraintTop_toTopOf="@+id/et_register_student_code" />

        <TextView
            android:id="@+id/tv_register_had_registered"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/login_id_7"
            android:textColor="@color/HH_Reminder_Link"
            android:textAppearance="@style/HustHoleTypography.Body3"
            app:layout_constraintEnd_toEndOf="@+id/btn_next"
            app:layout_constraintTop_toBottomOf="@+id/btn_next" />

        <TextView
            android:id="@+id/tv_register_warn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/student_code_error"
            android:textColor="@color/HH_Reminder_Warning"
            android:textAppearance="@style/HustHoleTypography.Body3"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/btn_next"
            app:layout_constraintTop_toBottomOf="@+id/btn_next"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/tv_register_appeal"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/login_id_6"
            android:textColor="@color/HH_Reminder_Link"
            android:textAppearance="@style/HustHoleTypography.Body3"
            app:layout_constraintStart_toStartOf="@+id/btn_next"
            app:layout_constraintTop_toBottomOf="@+id/btn_next" />

        <TextView
            android:id="@+id/tv_register_title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_26"
            android:text="@string/login_id_1"
            android:textAppearance="@style/HustHoleTypography.Headline1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1246" />

        <TextView
            android:id="@+id/tv_register_notice"
            android:layout_width="@dimen/dp_311"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_60"
            android:text="@string/login_id_8"
            android:textColor="@color/GrayScale_80"
            android:textAppearance="@style/HustHoleTypography.Body3"
            app:layout_constraintEnd_toEndOf="@+id/btn_next"
            app:layout_constraintStart_toStartOf="@+id/btn_next"
            app:layout_constraintTop_toBottomOf="@+id/btn_next" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>