<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Background_GrayScale_100">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="@dimen/dp_311"
            android:layout_height="@dimen/dp_56"
            android:layout_marginTop="@dimen/dp_70"
            android:background="@drawable/standard_button_gray"
            android:enabled="false"
            android:text="@string/register_8"
            android:textColor="@color/Button_GrayScale_100"
            android:textSize="@dimen/sp_16"
            app:layout_constraintStart_toStartOf="@+id/et_login_password"
            app:layout_constraintTop_toBottomOf="@+id/et_login_password" />

        <EditText
            android:id="@+id/et_login_student_code"
            android:layout_width="@dimen/dp_311"
            android:layout_height="@dimen/dp_56"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/dp_41"
            android:background="@drawable/lr_et_corner"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/register_2"
            android:importantForAutofill="no"
            android:inputType="none"
            android:maxLength="14"
            android:maxLines="1"
            android:textColorHint="@color/GrayScale_50"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_title" />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="@dimen/dp_311"
            android:layout_height="@dimen/dp_56"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/lr_et_corner"
            android:hint="@string/register_4"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColorHint="@color/GrayScale_50"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_login_student_code" />

        <TextView
            android:id="@+id/tv_login_suffix"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:text="@string/register_3"
            android:textAppearance="@style/HustHoleTypography.Body2"
            app:layout_constraintBottom_toBottomOf="@+id/et_login_student_code"
            app:layout_constraintEnd_toEndOf="@+id/et_login_student_code"
            app:layout_constraintTop_toTopOf="@+id/et_login_student_code" />

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/register_6"
            android:textColor="@color/HH_Reminder_Link"
            android:textAppearance="@style/HustHoleTypography.Body3"
            app:layout_constraintStart_toStartOf="@+id/et_login_password"
            app:layout_constraintTop_toBottomOf="@+id/et_login_password" />


        <TextView
            android:id="@+id/tv_login_warn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/student_code_error"
            android:textColor="@color/HH_Reminder_Warning"
            android:textAppearance="@style/HustHoleTypography.Body3"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/et_login_password"
            app:layout_constraintTop_toBottomOf="@+id/et_login_password"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/tv_had_not_registered"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_30"
            android:onClick="onClick"
            android:text="@string/register_7"
            android:textColor="@color/HH_Reminder_Link"
            android:textAppearance="@style/HustHoleTypography.Body3"
            app:layout_constraintEnd_toEndOf="@+id/et_login_password"
            app:layout_constraintTop_toBottomOf="@+id/et_login_password" />

        <TextView
            android:id="@+id/tv_login_title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_26"
            android:text="@string/register_1"
            android:textAppearance="@style/HustHoleTypography.Headline1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1246" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>