<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background_GrayScale_100">

    <include
        android:id="@+id/include_titlebar_white"
        layout="@layout/titlebar_lr_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/et_modify_email"
        android:layout_width="@dimen/dp_311"
        android:layout_height="@dimen/dp_56"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="41dp"
        android:background="@drawable/lr_et_corner"
        android:textColorHint="@color/GrayScale_50"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:hint="@string/retrieve_password_modify_2"
        android:textSize="@dimen/sp_14"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_modify_title" />

    <TextView
        android:id="@+id/tv_modify_title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_26"
        android:text="@string/retrieve_password_modify_1"
        android:textColor="@color/Title_GrayScale_20"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1246" />

    <Button
        android:id="@+id/btn_modify_jumptohomescreen"
        android:layout_width="@dimen/dp_311"
        android:layout_height="@dimen/dp_56"
        android:layout_marginTop="20dp"
        android:background="@drawable/standard_button_gray"
        android:textColor="@color/Button_GrayScale_100"
        android:text="@string/retrieve_password_modify_3"
        android:onClick="onClick"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_modify_email" />

    <TextView
        android:id="@+id/tv_modify_warn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_14"
        android:layout_marginTop="5dp"
        android:text="@string/retrieve_password_modify_4"
        android:textColor="@color/HH_Reminder_Warning"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@+id/btn_modify_jumptohomescreen"
        app:layout_constraintTop_toBottomOf="@+id/btn_modify_jumptohomescreen" />

    <ImageView
        android:id="@+id/iv_modify_visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="@+id/et_modify_email"
        app:layout_constraintEnd_toEndOf="@+id/et_modify_email"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="@+id/et_modify_email"
        app:layout_constraintTop_toTopOf="@+id/et_modify_email"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/checkbox_false" />


</androidx.constraintlayout.widget.ConstraintLayout>